# qweather-sdk

./: .gitignore  Cargo.toml  Makefile  README.md
qweather-example/: Cargo.toml
qweather-example/src/: main.rs
qweather-http-client/: Cargo.toml
qweather-http-client/src/: config.rs  lib.rs  reqwest.rs
qweather-service/: Cargo.toml
qweather-service/src/: api.rs  common.rs  lib.rs  util.rs
qweather-service/src/api/: geo.rs  weather.rs
qweather-service/src/api/geo/: city_lookup.rs  city_lookup_resp_test.json
qweather-service/src/api/weather/: daily.rs  hourly.rs  now.rs  now_resp_test.json
qweather-service/src/common/: lang.rs  location.rs  refer.rs  unit.rs  util.rs
