[package]
name = "qweather-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
env_logger = "0.10.1"
log = "0.4.20"
qweather-http-client = { path = "../qweather-http-client", features = [
    "reqwest-http-client",
] }
qweather-service = { path = "../qweather-service" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
