[package]
name = "qweather-http-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["reqwest-http-client"]
reqwest-http-client = ["reqwest"]

[dependencies]
anyhow = "1.0.76"
reqwest = { version = "0.11.23", features = [
    "json",
    "blocking",
    "gzip",
], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
