[package]
name = "qweather-http-client"
version = "0.2.0"
edition = "2021"
description = "QWeather HTTP Client"
license-file = "../LICENSE"

[features]
default = ["reqwest-http-client"]
reqwest-http-client = ["reqwest"]

[dependencies]
anyhow = "1.0.76"
reqwest = { version = "0.11.23", features = [
    "json",
    "gzip",
], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
