[package]
name = "qweather-http-client"
version = "0.2.0"
edition = "2021"
description = "QWeather HTTP Client"
license-file = "../LICENSE"

[features]
default = ["reqwest-http-client"]
reqwest-http-client = ["reqwest"]

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json", "gzip"], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
