[package]
name = "qweather-service"
version = "0.1.0"
edition = "2021"
description = "QWeather Service"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
qweather-http-client = { version = "0.1.0", path = "../qweather-http-client", default-features = false }
time = { version = "0.3.31", features = ["parsing"] }
time-macros = { version = "0.2.16", features = ["parsing"] }
